@@ -16,6 +16,7 @@
 - fix map format init in lookup_init().
 - fix incorrect max key length in defaults get_hash().
 - fix xfn sets incorrect lexer state.
+- fix old style key lookup.
 
 28/03/2014 autofs-5.0.9
 =======================
